# StrikeEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  StrikeEngine.sln  premake5.lua
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  SandboxApp.cpp  imgui.ini
Sandbox/Assets/Objects/: CCP2.tmpl  CCP2_CCP2.mat  cubeModel.fbx  maze.fbx  maze.tmpl  maze_Material.mat
Sandbox/Assets/Objects/box/: box.tmpl  box_Material.mat
Sandbox/Assets/Objects/coin/: coin.gltf  coin.tmpl  license.txt
Sandbox/Assets/Objects/cube/: desktop.ini
Sandbox/Assets/Objects/gizmo/: gizmo.tmpl  gizmo_DefaultMaterial.mat  untitled45.fbx  untitled45.tmpl
Sandbox/Assets/Objects/ground/: ground.fbx  ground.tmpl
Sandbox/Assets/Objects/spaceShip/: spaceShip.gltf  spaceship.tmpl
Sandbox/Assets/Objects/tempoTrack/: license.txt  scene.gltf  scene.tmpl  tempTrackScene.gltf  tempTrackScene.tmpl  tempTrackScene_020Ma.mat  tempTrackScene_020Mb.mat  tempTrackScene_BASE.mat  tempTrackScene_WINGS.mat  tempTrackScene_lights.mat  tempTrackScene_metalic dark gray.mat
Sandbox/Assets/Scenes/: AssetShowcase.xml  MainScene.xml  Material (2).mat  ModelScene.xml  SecondScene.xml  assetLoadTest.xml  assetTest.xml  game.xml  hierarchyTest.xml  lightTest.xml
Sandbox/Assets/Scripts/: PenguinScript.h
Sandbox/Assets/Shaders/: testShader.frag  testShader.vert
Sandbox/Assets/Templates/Scripts/: CameraMovement.cpp  CameraMovement.h  TestScript.cpp  TestScript.h
Sandbox/Assets/Test/: test.mtl  test.tmpl
Sandbox/assets/objects/box/: Nová položka Textový dokument.txt
Sandbox/assets/objects/panzer/: tank_low_poly.fbx
Sandbox/assets/shaders/: BlinnPhongShader.glsl  ColorShader.glsl  ComicShader.glsl  DefaultShader.glsl  FinalPassShader.glsl  FragmentShader.glsl  GeometryPassShader.glsl  GouraudShader.glsl  InlineShader.glsl  LightShader.glsl  LightningPassShader.glsl  PhongShader.glsl  ScreenShader.glsl  ShadowMapShader.glsl  ShadowMapTestShader.glsl  ShinyShader.glsl  SkyboxShader.glsl  TextureShader.glsl  VertexShader.glsl
Sandbox/scenes/: MainScene.xml  ModelScene.xml
Sandbox/scenes/templates/cubeModel/: Cube.mesh  Material.mat  Material_001.mat  cubeModel.xml
Sandbox/scenes/templates/tank/: BezierCircle.mesh  BezierCircle_002.mesh  Body.mat  Cube.mesh  Cube_001.mesh  Cube_003.mesh  Cylinder_001.mesh  Cylinder_002.mesh  Cylinder_003.mesh  Cylinder_004.mesh  Cylinder_005.mesh  Cylinder_007.mesh  Cylinder_008.mesh  Cylinder_009.mesh  Cylinder_010.mesh  Cylinder_011.mesh  Cylinder_012.mesh  Cylinder_013.mesh  Material.mat  tank_low_poly.xml
Sandbox/src/: Sandbox3D.cpp  Sandbox3D.h  SandboxApp.cpp  main.cpp
Sandbox/src/Scripts/: AssetShowcase.cpp  AssetShowcase.h  CameraMovement.cpp  CameraMovement.h  CubeSpawn.cpp  CubeSpawn.h  DeathTimer.cpp  DeathTimer.h  HierarchyExample.cpp  HierarchyExample.h  SunMovement.cpp  SunMovement.h  SwapScene.cpp  SwapScene.h  TestScript.cpp  TestScript.h
Sandbox/src/scripts/: BlockInteraction.cpp  BlockInteraction.h  ChunkManager.h  LightSpawner.h  PenguinScript.h  PlayerController.cpp  PlayerController.h  SceneCycler.cpp  SceneCycler.h  SunCycle.cpp  SunCycle.h  TankScript.h  WorldGenerator.cpp  WorldGenerator.h
Sandbox/src/scripts/assetTest/: AssetManagerTest.cpp  AssetManagerTest.h
Sandbox/src/scripts/lightTest/: CameraMovement.cpp  CameraMovement.h  LightBatchSpawner.cpp  LightBatchSpawner.h  SkyboxTest.cpp  SkyboxTest.h
Sandbox/src/scripts/testWorld/: BlockInteraction.cpp  ChunkManager.cpp  LightSpawner.cpp  PlayerController.cpp  PlayerController.h  SunCycle.cpp  WorldGenerator.cpp  WorldGenerator.h
StrikeEditor/: CMakeLists.txt  StrikeEditor.vcxproj
StrikeEditor/src/: EditorLayer.cpp  EditorLayer.h  StrikeEditorApp.cpp
StrikeEngine/: CMakeLists.txt  Layer.h  LayerStack.cpp  StrikeEngine.vcxproj  StrikeEngine.vcxproj.filters
StrikeEngine/Resources/Shaders/: DefaultPBR.frag  DefaultPBR.vert
StrikeEngine/res/: test
StrikeEngine/res/shaders/: clusterBuild.glsl  collision.glsl  cullLight.glsl  defaultPBR.glsl  finalPass.glsl  geometry.glsl  skybox.glsl  sunShadowMap.glsl  text.glsl
StrikeEngine/resources/Shaders/: Skybox.frag  Skybox.vert
StrikeEngine/src/: StrikeEngine.h  strikepch.cpp  strikepch.h
StrikeEngine/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLTexture2D.h
StrikeEngine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
StrikeEngine/src/StrikeEngine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.cpp  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h
StrikeEngine/src/StrikeEngine/Asset/: AssetManager.cpp  AssetManager.h  ModelParser.cpp  ModelParser.h
StrikeEngine/src/StrikeEngine/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  ObjectLoader.cpp  ObjectLoader.h  ParserUtils.h  Profiler.h  Timer.cpp  Timer.h  UUID.cpp  UUID.h  Window.cpp  Window.h
StrikeEngine/src/StrikeEngine/Events/: ApplicationEvent.h  Event.h  EventBus.cpp  EventBus.h  KeyEvent.h  MouseEvent.h  UserEvent.h
StrikeEngine/src/StrikeEngine/Graphics/: FontRenderer.cpp  FontRenderer.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.cpp  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  RenderCommands.h  RenderData.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
StrikeEngine/src/StrikeEngine/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
StrikeEngine/src/StrikeEngine/Renderer/: Camera.cpp  Camera.h  Entity.cpp  FrameBuffer.cpp  FrameBuffer.h  FrameBufferManager.cpp  FrameBufferManager.h  LightManager.cpp  (+22 more)
Tests/: CMakeLists.txt
Tests/Assets/Scenes/: Empty.xml
Tests/unit/: test_LogicComponent.cpp  test_ParserUtils.cpp  test_bounds.cpp  test_componentRegistry.cpp  test_entity.cpp  test_gamedata.cpp  test_sceneEntityHierarchy.cpp  test_sceneWorldTransform.cpp  test_scriptRegistry.cpp  test_sun.cpp
(+383 files in other folders)
